# ChangeLog for dev-lisp/common-lisp-controller
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/common-lisp-controller/ChangeLog,v 1.40 2012/01/06 23:03:09 vapier Exp $

  06 Jan 2012; Mike Frysinger <vapier@gentoo.org>
  common-lisp-controller-4.27.ebuild, common-lisp-controller-5.13-r1.ebuild:
  Allow newer coreutils to provide realpath.

  13 Oct 2009; Ulrich Mueller <ulm@gentoo.org> -files/4.15/lisp-config.lisp,
  -common-lisp-controller-4.15.ebuild, common-lisp-controller-4.27.ebuild,
  -common-lisp-controller-5.13.ebuild,
  common-lisp-controller-5.13-r1.ebuild:
  Update dependency after realpath package move, bug 273968. Remove old.

  10 Jan 2009; Raúl Porcel <armin76@gentoo.org>
  common-lisp-controller-5.13-r1.ebuild:
  alpha/ia64 stable wrt #246074

  07 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  common-lisp-controller-5.13-r1.ebuild:
  Add ~alpha/~ia64 wrt #229217

  27 Mar 2008; Raúl Porcel <armin76@gentoo.org>
  common-lisp-controller-4.15.ebuild, common-lisp-controller-4.27.ebuild,
  common-lisp-controller-5.13.ebuild, common-lisp-controller-5.13-r1.ebuild:
  Fix debian HOMEPAGE

  28 Nov 2007; Fabian Groffen <grobian@gentoo.org>
  common-lisp-controller-4.15.ebuild, common-lisp-controller-4.27.ebuild,
  common-lisp-controller-5.13.ebuild, common-lisp-controller-5.13-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  19 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  common-lisp-controller-4.27.ebuild:
  Stable on sparc

  07 May 2006; Markus Rothe <corsair@gentoo.org>
  common-lisp-controller-4.27.ebuild:
  Stable on ppc64

*common-lisp-controller-5.13-r1 (05 Apr 2006)

  05 Apr 2006; Matthew Kennedy <mkennedy@gentoo.org>
  +common-lisp-controller-5.13-r1.ebuild:
  Install missing /usr/sbin/clc-update-customized-images and add
  /etc/common-lisp/images/; Resolves Bug #128920.
