@@ -5,13 +5,13 @@ AUX 5.13/lisp-config.lisp 32 RMD160 f4ada4b5e405bbd9c1d3ee25c0d9ba575dd8e148 SHA
 AUX 5.13/prefix.patch 6933 RMD160 e5861e83a65f8ca225cf25ad14b5d500acf5550d SHA1 f2e9d2fcd9ba9141c5f327c898b6ff236b137ecc SHA256 23735f482f70146dc10300aecd69da830a5ad368f8392f2daa20d2ddafbe3c78
 AUX README.Gentoo 989 RMD160 7272e88ecfaa147c30984aa03b106a909c1af908 SHA1 997aa3895271cf7ee0962a3cdd819fb4baaf4a2f SHA256 603a4f938f88be364775a5ae9b72dac3d291a5077038a69d29a64b0b2d08c802
 DIST common-lisp-controller_5.13.tar.gz 30846 RMD160 d68964f2a2da04ee1183d57377348f164c27517b SHA1 8f80205a7be842315e80e5f28d0415dc86b4916d SHA256 ec2e9c6fa566b2d5f18d2823e48e54834392ca8c76e677047f03d5d940e40249
-EBUILD common-lisp-controller-5.13-r1.ebuild 3391 RMD160 bf08f0133762ac68487df08f5962143eea4d4b1a SHA1 1dff0e9a23c6b20ba6f5263a782eea87cc4858f0 SHA256 ba82ed728b1d804b92eef0f65a00e00c5b15cdf8ecb3e1a805bf5daa70a33369
-MISC ChangeLog 6818 RMD160 ad0bc70bb9fb746ca60ca7f01c0eba68d1f8ea2c SHA1 f26ef6cd988dc0f9f0c26046b218e3fc99817ea9 SHA256 0528c3e9488ce10c3748cfeaf5d3bcd6cc66680240287821955ce5ea000cf326
+EBUILD common-lisp-controller-5.13-r1.ebuild 3420 RMD160 f12081fe67a87a04a53f9889bfa395c20c1768c3 SHA1 a7c84e435ff9bcd500646e7ff5523544176731c8 SHA256 e8571cd0a60486437b7a32a576e9361c2daecf2294582af3d5ebc2b6c095b77d
+MISC ChangeLog 7022 RMD160 f610e218b2a7b8fea02dc12869d3bd6b7e95b45c SHA1 5c0472d6b67db4a5a0471a7216f75a806a6901a5 SHA256 fae0204da6f9ba1c88a6f19b3697d00b22b549aec9d92777000b36c2c6f0b79a
 MISC metadata.xml 511 RMD160 1e22e95cc758b2d9c8c80ae6ce9a9ad73ffe564d SHA1 5222e79bece623f785247ec13373b5507579d79f SHA256 3de5d689fe537dd4339bd66b889479b1782e3048bcdc7a2ef9f6b5f1d04c08cc
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (SunOS)
+Version: GnuPG v2.0.19 (Darwin)
 
-iEYEARECAAYFAk8+ku0ACgkQX3X2B8XHTola7QCdHMkKTVjfFgJfRMtmgxrACBLM
-Jw4AoJjebz9g1JGK8zuukmT9yChOKdqY
-=SJmE
+iEYEARECAAYFAk+W7SUACgkQX3X2B8XHTokpdQCglp1NxHl34bTAy0J0WeqWO606
+qxIAnjEccacim1wlPkW08ElgKkxosIlU
+=peEC
 -----END PGP SIGNATURE-----
