@@ -1,7 +1,8 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/common-lisp-controller/common-lisp-controller-5.13-r1.ebuild,v 1.7 2012/01/06 23:03:09 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/common-lisp-controller/common-lisp-controller-5.13-r1.ebuild,v 1.8 2012/04/07 10:20:00 neurogeek Exp $
 
+EAPI="3"
 inherit eutils prefix
 
 DESCRIPTION="Common Lisp Controller"
@@ -14,8 +15,9 @@ KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE=""
 
 DEPEND="|| ( >=sys-apps/coreutils-8.15 app-misc/realpath )
-	>=dev-lisp/cl-asdf-1.84
+	>=dev-lisp/asdf-1.84
 	dev-lang/perl"
+RDEPEND="${DEPEND}"
 
 S=${WORKDIR}/${PN}
 
