@@ -1,6 +1,10 @@
 # ChangeLog for dev-lisp/common-lisp-controller
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/common-lisp-controller/ChangeLog,v 1.40 2012/01/06 23:03:09 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/common-lisp-controller/ChangeLog,v 1.41 2012/04/07 10:20:00 neurogeek Exp $
+
+  07 Apr 2012; Jesus Rivero <neurogeek@gentoo.org>
+  common-lisp-controller-4.27.ebuild, common-lisp-controller-5.13-r1.ebuild:
+  Changed DEPEND to depend on dev-lisp/asdf instead of dev-lisp/cl-asdf
 
   06 Jan 2012; Mike Frysinger <vapier@gentoo.org>
   common-lisp-controller-4.27.ebuild, common-lisp-controller-5.13-r1.ebuild:
